Fix text align on mobile

--- a/src/pageHeader.scss
+++ b/src/pageHeader.scss
@@ -12,6 +12,9 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      button {
+        text-align: left;
+      }
     }
     .page-header-title {
       font-size: 2.2rem;
